task/task.css
body {
  font-family: "Segoe UI", sans-serif;
  background-color: #1b1b1b;
  padding: 40px;
  min-height: 100vh;
  display: flex;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* #region Form input */
form {
  /* background-color: grey; */
  padding: 20px 25px;
  border-radius: 12px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
  width: 400px;
  display: flex;
  flex-direction: column;
  gap: 12px;

  /* display:flex;
  justify-content: center; */
}

input::placeholder,
textarea::placeholder,
.file-label {
  color: white;
  opacity: 0.8;
}

.file-label,
input,
textarea,
button {
  background-color: rgba(175, 175, 175, 0.1);
  font-size: 16px;
  color: white;
  padding: 10px;
  border-radius: 8px;
}

textarea {
  resize: vertical;
}

#image {
  display: none;
}
/* Add Task Button styling */
button {
  background-color: #0078ff;
  color: white;
  font-weight: bold;
  border: none;
  cursor: pointer;
  transition: background 0.3s ease;
}

button:hover {
  background-color: #005fd1;
}
/* #endregion */

/* #region Task list section */
#taskForm {
  width: 90vw;
  background-color: rgb(9, 30, 86);
  border-left: solid calc(0.1vw + 1px) rgba(141, 129, 228, 0.2);
  border-bottom: solid calc(0.2vw + 1px) rgba(141, 129, 228, 0.2);
}

#taskList {
  background-color: blue;
  width: 100vw;
  margin-top: 0;
}

.task {
  min-width: 300px;
  height: 150px;
  border-radius: 10px;
  box-shadow: inset 0 0 15px rgba(135, 135, 135, 0.1);
  background-color: rgba(88, 89, 117, 0.404);
  padding: 15px 20px;
  margin-bottom: 15px;
  position: absolute;
  cursor: grab;
  user-select: none;
}

.task:active {
  cursor: grabbing;
}

.task h3 {
  margin: 0;
  color: #333;
}

.task p {
  color: #666;
  margin: 5px 0;
}

.task small {
  color: #999;
  display: block;
  margin-top: 8px;
}
/* #endregion */

